fix: made timeline responsive - set overflow-x: scroll for the timeline table - change .card-container-home to .card-container in alignment of child divs in cards and in media query - finish layout for timeline cards

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ nav#navbar {
 	grid-column: 2 / -1;
 }
 
-.card-container-home .card div {
+.card-container .card div {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -329,6 +329,10 @@ table td {
 }
 
 /*Timeline styles*/
+.timeline-container {
+	max-width: 100%;
+	overflow-x: scroll;
+}
 .timeline-table {
 	width: fit-content;
 }
@@ -372,19 +376,30 @@ table td {
 }
 
 .card-container-timeline .card:nth-child(2) {
-	grid-column: 2 / 4;
+	grid-column: 2 / 3;
 }
 
 .card-container-timeline .card:nth-child(3) {
+	grid-column: 3 / -1;
+}
+
+.card-container-timeline .card:nth-child(4) {
+	grid-column: 1 / 4;
+}
+.card-container-timeline .card:nth-child(5) {
 	grid-column: 4 / -1;
 }
 /*----*/
 @media screen and (max-width: 1200px) {
-	.card-container-home {
+	.card-container-home,
+	.card-container-timeline {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 	}
+	/* .timeline-table {
+		display: none;
+	} */
 	iframe {
 		width: 100%;
 		height: 100%;
